Fix styling for categories and topics on mobile and desktop.

--- a/web-client/app/styles/enhanced.scss
+++ b/web-client/app/styles/enhanced.scss
@@ -238,7 +238,7 @@ body {
 .category-list {
   .card.category {
     width: 180px;
-    height: 180px;
+    height: 160px;
     padding: 2em;
 
     i {
