--- a/web-client/app/styles/main.scss
+++ b/web-client/app/styles/main.scss
@@ -112,12 +112,13 @@ input[type="password"] {
 .category-list {
   .card.category {
     cursor: pointer;
-    width: 80px;
-    height: 80px;
-    padding: 0.5em;
+    width: 110px;
+    height: 100px;
+    padding: 1.6em 0;
     text-align: center;
     font-size: 0.8em;
     display: inline-block;
+    vertical-align: middle;
     margin: 0.3em;
 
     i {
